sticky menu for parts of the book, fix for scrolling to behind top menu bars

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -142,6 +142,7 @@
     border-radius: 10px;
 }
 
+/* sticky menu for easy scroll to content */
 .sticky-menu {
     position: sticky;
     /* below top menu */
@@ -151,6 +152,16 @@
     z-index: 5;
 }
 
+/* fix for sticky menu: scrolling to behind top menu bars  */
+* {
+    scroll-margin-top: 83px;
+}
+
+.about-page * {
+    scroll-margin-top: 108px;
+}
+
+/* fix for high number of pages */
 .pagination-scroll {
     max-width: 90vw;
     overflow: scroll;
